--- a/.github/workflows/yamdb_workflow.yaml
+++ b/.github/workflows/yamdb_workflow.yaml
@@ -52,7 +52,7 @@ jobs:
         passphrase: ${{ secrets.PASSPHRASE }} # если ваш ssh-ключ защищен фразой-паролем
         port: 22
         script: |
-          sudo docker pull icgrem/YamDB-final
+          sudo docker pull icgrem/yamdb-final
           sudo docker stop $(docker ps -a -q)
           sudo docker run --rm -d -p 81:80 icgrem/YamDB-final
   send_message:
