--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -28,8 +28,8 @@
 server {
     # следи за портом 80 на сервере с IP <ваш-ip>
     listen 80;
-    server_name 127.0.0.1 localhost;
-    #84.201.179.105 ya-tube.ga www.ya-tube.ga;
+    # server_name 127.0.0.1 localhost;
+    84.201.179.105 ya-tube.ga www.ya-tube.ga;
 
     # если в адресе запроса есть аргумент '/static/' - верни файл из директории static/
     location /static/ {
