--- a/yamdb_workflow.yaml
+++ b/yamdb_workflow.yaml
@@ -37,7 +37,7 @@ jobs:
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        repository: icgrem/YamDB-final
+        repository: icgrem/yamdb-final
         tag_with_ref: true
   deploy:
     runs-on: ubuntu-latest
@@ -52,9 +52,9 @@ jobs:
         passphrase: ${{ secrets.PASSPHRASE }} # если ваш ssh-ключ защищен фразой-паролем
         port: 22
         script: |
-          sudo docker pull icgrem/YamDB-final
+          sudo docker pull icgrem/yamdb-final
           sudo docker stop $(docker ps -a -q)
-          sudo docker run --rm -d -p 81:80 icgrem/YamDB-final
+          sudo docker run --rm -d -p 81:80 icgrem/yamdb-final
   send_message:
     runs-on: ubuntu-latest
     needs: deploy
