--- a/yamdb_workflow.yaml
+++ b/yamdb_workflow.yaml
@@ -1,4 +1,4 @@
-name: yamdb-final workflow
+name: yamdb-final-workflow
 
 on: [push]
 
@@ -54,7 +54,7 @@ jobs:
         script: |
           sudo docker pull icgrem/yamdb-final
           sudo docker stop $(docker ps -a -q)
-          sudo docker run --rm -d -p 81:80 icgrem/yamdb-final
+          sudo docker run --rm -d -p 8080:8000 icgrem/yamdb-final
   send_message:
     runs-on: ubuntu-latest
     needs: deploy
@@ -64,4 +64,4 @@ jobs:
       with:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
-        message: ${{ github.yamdb_workflow }} залит и запущен!
+        message: ${{ github.workflow }} залит и запущен!
