--- a/.github/workflows/yamdb_workflow.yaml
+++ b/.github/workflows/yamdb_workflow.yaml
@@ -19,6 +19,14 @@ jobs:
         postgresql user: 'postgres'
         postgresql password: 'Gjcnuhtc_gfccdjhl'
 
+    - name: Setup Postgres database
+      uses: Daniel-Marynicz/postgresql-action@master
+      with:
+        postgres_image_tag: 12-alpine
+        app_user: postgres
+        app_user_password: Gjcnuhtc_gfccdjhl
+        app_db: postgres
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
