--- a/.github/workflows/yamdb_workflow.yaml
+++ b/.github/workflows/yamdb_workflow.yaml
@@ -12,12 +12,12 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.8.5
-    - name: Getting PostgreSQL
-      uses: harmon758/postgresql-action@v1
-      with:
-        postgresql db: 'postgres'
-        postgresql user: 'postgres'
-        postgresql password: 'Gjcnuhtc_gfccdjhl'
+    # - name: Getting PostgreSQL
+    #   uses: harmon758/postgresql-action@v1
+    #   with:
+    #     postgresql db: 'postgres'
+    #     postgresql user: 'postgres'
+    #     postgresql password: 'Gjcnuhtc_gfccdjhl'
 
     - name: Setup Postgres database
       uses: Daniel-Marynicz/postgresql-action@master
