--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -16,86 +16,23 @@
 # Please see /usr/share/doc/nginx-doc/examples/ for more detailed examples.
 ##
 
-# Default server configuration
-#
-# инструкции для nginx
-
-#######################
-# upstream yamdb_final {
-#     server web:8000;
-# }
-#######################
 server {
-    # следи за портом 80 на сервере с IP <ваш-ip>
     listen 80;
-    # server_name 127.0.0.1 localhost;
-    84.201.179.105 ya-tube.ga www.ya-tube.ga;
+    server_name 127.0.0.1 localhost;
 
-    # если в адресе запроса есть аргумент '/static/' - верни файл из директории static/
     location /static/ {
         root /code/;
     }
         
-    #     # медиа файлы
-    #     location /media/ {
-    #     root /code/;
-    # }
+        location /media/ {
+        root /code/;
+    }
         
-    # любой другой запрос передай серверу Gunicorn
     location / {
         proxy_set_header Host $http_host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-
-        # передавать запросы нужно на внутренний IP на порт 8000
         proxy_pass http://web:8000;
     }
-
-    # listen 443 ssl; # managed by Certbot
-    # ssl_certificate /etc/letsencrypt/live/ya-tube.ga/fullchain.pem; # managed by Certbot
-    # ssl_certificate_key /etc/letsencrypt/live/ya-tube.ga/privkey.pem; # managed by Certbot
-    # include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
-    # ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
-
-
 }
-
-# Virtual Host configuration for example.com
-#
-# You can move that to a different file under sites-available/ and symlink that
-# to sites-enabled/ to enable it.
-#
-#server {
-#	listen 80;
-#	listen [::]:80;
-#
-#	server_name example.com;
-#
-#	root /var/www/example.com;
-#	index index.html;
-#
-#	location / {
-#		try_files $uri $uri/ =404;
-#	}
-#}
-
-# server {
-#     if ($host = www.ya-tube.ga) {
-#         return 301 https://$host$request_uri;
-#     } # managed by Certbot
-
-
-#     if ($host = ya-tube.ga) {
-#         return 301 https://$host$request_uri;
-#     } # managed by Certbot
-
-
-#     listen 80;
-#     server_name 84.201.179.105 ya-tube.ga www.ya-tube.ga;
-#     return 404; # managed by Certbot
-
-
-
-
-# }
