--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,11 +19,9 @@ services:
     command: gunicorn api_yamdb.wsgi:application --bind 0.0.0.0:8000
     volumes:
       - staticfiles:/code/static/
-    #command: /code/gunicorn.sh
+      - staticfiles:/code/media/
     ports:
       - 8000:8000
-    # expose:
-    #   - "8000"
     depends_on:
       - db
     env_file:
@@ -33,8 +31,9 @@ services:
     build: ./nginx
     volumes:
       - staticfiles:/code/static/
+      - staticfiles:/code/media/
     ports:
       - "80:80"
-      #- 443:443
     depends_on:
       - web
+      
