--- a/.github/workflows/yamdb_workflow.yaml
+++ b/.github/workflows/yamdb_workflow.yaml
@@ -36,7 +36,7 @@ jobs:
         tag_with_ref: true
   send_message:
     runs-on: ubuntu-latest
-    needs: deploy
+    needs: push_to_docker_hub
     steps:
     - name: send message
       uses: appleboy/telegram-action@master
