--- a/requirements.txt
+++ b/requirements.txt
@@ -27,11 +27,12 @@ django-extensions
 django-cors-headers
 django-filter
 asgiref==3.2.10
-Django==3.0.8
+Django==3.1.14
 djangorestframework==3.11.0
 djangorestframework-simplejwt==4.3.0
 gunicorn==20.0.4
 psycopg2-binary==2.8.5
-PyJWT==1.7.1
+pyjwt>=2.4.0
 pytz==2020.1
 sqlparse==0.3.1
+urllib3>=1.26.5
