--- a/requirements.txt
+++ b/requirements.txt
@@ -12,13 +12,13 @@ importlib-metadata==1.6.0  # via pluggy, pytest
 more-itertools==8.2.0     # via pytest
 packaging==20.3           # via pytest
 pluggy==0.13.1            # via pytest
-py==1.8.1                 # via pytest
+py==1.10.0                 # via pytest
 pyparsing==2.4.7          # via packaging
 pytest-django==3.9.0      # via -r requirements.in
 pytest==5.4.1             # via pytest-django
-requests==2.23.0          # via -r requirements.in
+requests==2.31.0          # via -r requirements.in
 six==1.14.0               # via packaging
-urllib3==1.25.9           # via requests
+urllib3==1.26.5           # via requests
 wcwidth==0.1.9            # via pytest
 zipp==3.1.0               # via importlib-metadata
 python-memcached==1.59
@@ -27,12 +27,11 @@ django-extensions
 django-cors-headers
 django-filter
 asgiref==3.2.10
-Django==3.1.14
-djangorestframework==3.11.0
+Django==3.1.9
+djangorestframework==3.11.2
 djangorestframework-simplejwt==4.3.0
 gunicorn==20.0.4
 psycopg2-binary==2.8.5
-pyjwt>=2.4.0
+pyjwt==2.4.0
 pytz==2020.1
 sqlparse==0.3.1
-urllib3>=1.26.5
